Fix layout issues and write tests

--- a/app/styles/shared/utilities/_utilities.overflows.scss
+++ b/app/styles/shared/utilities/_utilities.overflows.scss
@@ -1,1 +1,2 @@
 .u-overflow-hidden { overflow: hidden; }
+.u-overflow-auto   { overflow: auto;   }
